--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?><!--   ~ Copyright (c) 2017. kazi srabon. Contact : kaziiit@gmail.com -->
+<?xml version="1.0" encoding="utf-8"?><!-- ~ Copyright (c) 2017. kazi srabon. Contact : kaziiit@gmail.com -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.ks.ecmanager.ecouriermanager">
 
@@ -30,7 +30,8 @@
             android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateHidden|adjustPan|adjustNothing" />
-        <activity android:name=".activities.firstLayer.ActivityProfile"></activity>
+        <activity android:name=".activities.firstLayer.ActivityProfile" />
+        <activity android:name=".activities.secondLayer.ActivityConsignmentDetails"></activity>
     </application>
 
 </manifest>
