--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,7 @@
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateHidden|adjustPan|adjustNothing" />
         <activity android:name=".activities.firstLayer.ActivityProfile" />
+        <activity android:name=".activities.secondLayer.ActivityConsignment" />
         <activity android:name=".activities.secondLayer.ActivityConsignmentDetails" />
         <activity android:name=".KotlinActivity"></activity>
     </application>
