--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,7 +36,8 @@
         <activity android:name=".KotlinActivity" />
         <activity android:name=".activities.firstLayer.Main2Activity" />
         <activity android:name=".activities.secondLayer.ActivityDelivery" />
-        <activity android:name=".activities.thirdLayer.ActivityMultipleScan"></activity>
+        <activity android:name=".activities.thirdLayer.ActivityMultipleScan" />
+        <activity android:name=".activities.thirdLayer.ActivityMultipleList"></activity>
     </application>
 
 </manifest>
